--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
+    "font-awesome": "^4.7.0",
     "iso-3166": "^4.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
