--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   },
   "dependencies": {
     "@electron/notarize": "^2.3.2",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "better-sqlite3": "^11.3.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
