--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "font-awesome": "^4.7.0",
     "iso-3166": "^4.3.0",
     "react": "^18.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.1",
