--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "react-world-flags": "^1.6.0"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
