--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *       text    eol=lf
-*.exe   binary
+*.exe filter=lfs diff=lfs merge=lfs -text
 *.png   binary
 *.jpg   binary
 *.jpeg  binary
@@ -12,3 +12,5 @@
 *.woff2 binary
 *.db filter=lfs diff=lfs merge=lfs -text
 demo_table.db filter=lfs diff=lfs merge=lfs -text
+*.nupkg filter=lfs diff=lfs merge=lfs -text
+*.asar filter=lfs diff=lfs merge=lfs -text
