--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,7 @@
 demo_table.db filter=lfs diff=lfs merge=lfs -text
 *.nupkg filter=lfs diff=lfs merge=lfs -text
 *.asar filter=lfs diff=lfs merge=lfs -text
+out/electron-react-boilerplate-win32-x64/resources/app.asar filter=lfs diff=lfs merge=lfs -text
+out/electron-react-boilerplate-win32-x64/electron-react-boilerplate.exe filter=lfs diff=lfs merge=lfs -text
+out/make/squirrel.windows/x64/electron_react_boilerplate-1.0.0-full.nupkg filter=lfs diff=lfs merge=lfs -text
+out/make/squirrel.windows/x64/electron-react-boilerplate-1.0.0[[:space:]]Setup.exe filter=lfs diff=lfs merge=lfs -text
