--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "file-saver": "^2.0.5",
     "font-awesome": "^4.7.0",
     "iso-3166": "^4.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-country-flag": "^3.1.0",
@@ -180,7 +181,7 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.2.2",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.2",
+    "webpack": "^5.98.0",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
