--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "^29.5.5",
     "@types/node": "20.6.2",
     "@types/react": "^18.2.21",
