--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@electron/notarize": "^2.3.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "better-sqlite3": "^11.8.1",
+    "csv-parse": "^5.6.0",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
     "electron-updater": "^6.1.4",
